src/scss/backend/components/ember_table.scss
/* ... */
.ember-table-header-container .ui-resizable-handle.ui-resizable-s {
  bottom: 0;
  width: 100%;
  height: 2px;
  background: 0 0;
}

.ember-table-header-container .ui-sortable-helper,
.ember-table-header-container .ui-sortable-helper .ui-resizable-handle {
  background-color: #eaeaea;
}

.ember-table-header-container .ui-resizable-handle.ui-resizable-s:hover {
  cursor: row-resize;
}

.ember-table-header-container .ui-sortable {
  width: 100%;
  height: 100%;
  position: relative;
}

.ember-table-header-container .ui-sortable-helper .ember-table-content-container {
  display: none;
}

.ember-table-header-container .ember-table-right-table-block .ember-table-table-row {
  width: 100%;
  overflow-x: auto;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.ember-table-header-container .ember-table-right-table-block .ember-table-table-row .ui-sortable {
  overflow: hidden;
}

/* header cells */

.ember-table-header-cell {
  padding: 0;
  position: relative;
  display: block !important;
  font-size: 12px !important;
  background-color: #f8f8f8;
}

.ember-table-header-cell span {
  line-height: 1;
}

.ember-table-header-cell .ember-table-content-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.ember-table-header-cell .ember-table-content-container:hover {
  cursor: pointer;
}

.ember-table-header-cell .ember-table-content-container .ember-table-content {
  padding: 5px;
  line-height: 1.4;
  position: absolute;
  bottom: 2px;
  font-weight: 700;
  width: 100%;
}

.ember-table-header-cell.text-left .ember-table-content {
  left: 0;
}

.ember-table-header-cell.text-right .ember-table-content {
  right: 0;
}

/* footer */

.ember-table-footer-container {
  position: absolute;
  border-top: 1px solid #dcdcdc;
  overflow: hidden;
  z-index: 1;
}

/* column indicator */

.ember-table-column-sortable-indicator {
  position: absolute;
  top: 0;
  left: -2px;
  height: 100%;
  background-color: #333;
  opacity: .4;
  width: 3px;
  z-index: 1000;
  display: none;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/* antiscroll */

.antiscroll-scrollbar {
  z-index: 10;
}

.ember-table-body-container .antiscroll-box {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.ember-table-body-container .antiscroll-box:hover {
  overflow: scroll;
}

// use built-in scrollbar
.ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-horizontal,
.ember-table-body-container.antiscroll-wrap .antiscroll-scrollbar-vertical {
  display: none !important;
}

.ember-table-body-container .ember-table-left-table-block {
  position: sticky;
  position: -webkit-sticky;
  left: 0;
  z-index: 1;
  background-color: #fff;
}

/* levels */

.ember-table-table-row.ember-table-last-row {
  border-bottom: none;
}

.ember-table-body-container .ember-table-table-row.ember-table-hover,
.ember-table-body-container .ember-table-table-row:hover {
  background-color: #e5edf8;
}

.ember-table-body-container .ember-table-table-row.ember-table-selected {
  color: #eee;
  background-color: #227ecb;
}

.ember-table-body-container .ember-table-table-row.ember-table-selected .ember-table-cell {
  border-right: 1px solid #1d6bac;
}

.ember-table-header-cell.table-header-cell,
.ember-table-left-table-block .ember-table-cell.table-header-cell {
  border-right: solid transparent !important;
  vertical-align: middle;
  line-height: 52px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ember-table-header-container,
.ember-table-left-table-block .ember-table-table-row,
.ember-table-right-table-block .ember-table-table-row {
  border-bottom: 1px solid #e9e9e9;
}

.ember-table-header-cell.table-header-cell {
  color: #888;
  font-weight: 500;
  padding-left: 0;
  border-right-width: 0 !important;
  font-size: 13px !important;
}

.ember-table-header-cell.table-header-cell-sort-ascending,
.ember-table-header-cell.table-header-cell-sort-descending {
  color: #0d94f6;
}

.ember-table-header-cell.table-header-cell .table-header-cell-content {
  cursor: default;
  padding-left: 15px;
}

.ember-table-header-cell.table-header-cell .table-header-cell-content i {
  margin-left: 6px;
}

.ember-table-header-cell.table-header-cell.table-header-cell-sort-ascending .table-header-cell-content>span,
.ember-table-header-cell.table-header-cell.table-header-cell-sort-descending .table-header-cell-content>span,
.ember-table-header-cell.table-header-cell.table-header-cell-sortable .table-header-cell-content>span {
  cursor: pointer;
}

.ember-table-header-cell.table-header-cell.table-header-cell-sort-ascending .table-header-cell-content .zmdi-sort-amount-desc,
.ember-table-header-cell.table-header-cell.table-header-cell-sort-descending .table-header-cell-content .zmdi-sort-amount-desc,
.ember-table-header-cell.table-header-cell.table-header-cell-sortable .table-header-cell-content .zmdi-sort-amount-desc {
  position: relative;
  top: 2px;
  font-size: 18px;
}

.ember-table-right-table-block .ember-table-header-cell.table-header-cell {
  cursor: move;
}

.ember-table-right-table-block .ember-table-header-cell.table-header-cell:hover {
  background-color: #efefef;
}

.ember-table-header-cell.table-header-cell-sort-ascending i {
  -ms-transform: rotate(180deg);
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}

.ember-table-header-cell.table-header-cell-select .checkbox {
  display: block;
}

.ember-table-header-cell.table-header-cell-select i {
  margin: 15px 3px 0 0 !important;
  font-size: 24px;
  color: #888;
}

.ember-table-header-cell.table-header-cell-select i.zmdi-check-square,
.ember-table-header-cell.table-header-cell-select i.select,
.ember-table-header-cell.table-header-cell-select i:hover {
  color: #0d94f6;
}

.ember-table-left-table-block .ember-table-cell.table-header-cell {
  font-size: 13px;
  color: #888;
  padding-left: 0;
  border-right-width: 0 !important;
}
/* ... */

